Removes vertical align fix causes issues in chrome

--- a/src/elements/icon.less
+++ b/src/elements/icon.less
@@ -61,8 +61,6 @@ i.icon {
 
   speak: none;
 
-  vertical-align: 1px;
-
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
